--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -8,7 +8,77 @@
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url '' %}">Task Manager</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url '' %}">Tasks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url '' %}">Search</a>
+                    </li>
+                    <!--
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url '' %}">Author</a>
+                    </li>
+                    -->
+                </ul>
+            </div>
+        </div>
+    </nav>
+    {% block content %}
+    {% endblock %}
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer class="footer bg-dark ">
+        <div class="container">
+            <div class="row py-5 ">
+                <div class="col-6">
+                    <a class="mx-3" href="" style="text-decoration:none">About</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Contact</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Terms of Use</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Privacy Policy</a>
+                </div>
+                <div class="col-6 text-end">
+                    <a class="mx-3" href=" #!" style="text-decoration:none">
+                        <i class="bi-facebook fs-3"></i>
+                    </a>
+                    <a class="mx-3" href=" #!" style="text-decoration:none">
+                        <i class="bi-twitter fs-3"></i>
+                    </a>
+                    <a class="mx-3" href=" #!" style="text-decoration:none">
+                        <i class="bi-instagram fs-3"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
