--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url '' %}">Task Manager</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Task Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url '' %}">Tasks</a>
+                        <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url '' %}">Search</a>
+                        <a class="nav-link" href="{% url 'search' %}">Search</a>
                     </li>
                     <!--
                     <li class="nav-item">
