--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -3,7 +3,7 @@
 <div class="text-center">
     <h2 class="text-center">Task Manager</h2>
     <p>
-        This is the new Blog App for Maktab98
+        Welcome to Homepage of Maktab98 Tasks
     </p>
 </div>
 {% endblock %}
