--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -6,10 +6,10 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">{{post.title}}</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href='{{ post.id }}' style="text-decoration:none" style="text-decoration:none">{{ post.title }}</a>
+                <p class="card-text">
+                    {{ tasks.description}}
+                </p>
+                <a href='{{ tasks.id }}' style="text-decoration:none" style="text-decoration:none">{{ tasks.title }}</a>
             </div>
         </div>
     </div>
