--- a/HW15/TaskManager/template/task_detail.html
+++ b/HW15/TaskManager/template/task_detail.html
@@ -6,5 +6,10 @@
     <p><strong>Description:</strong> {{ detail.description }}</p>
     <p><strong>Due Date:</strong> {{ detail.due_date }}</p>
     <p><strong>Remaining time:</strong> {{remain}}</p>
+    <p><strong>Tags:</strong>
+        {% for tag in tags %}
+        {{ tag.name }}
+        {% endfor %}
+    </p>
 </div>
 {%endblock%}
