--- a/HW15/TaskManager/template/search.html
+++ b/HW15/TaskManager/template/search.html
@@ -1,10 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Search</h2>
-<form method=POST action="{% url 'search_results' %}">
-    {% csrf_token %}
-    <input type="search" placeholder="Search Title & Tag" arial-label="Search" name="searched">
-    <button class="btn btn-outline-primary" type="submit">Search</button>
-</form>
+<br>
+<br>
+<br>
+<br>
+<div class="container text-center">
+    <h1 class="display-2">Search</h2>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-3">
+                <br>
+            </div>
+            <div class="col-6">
+                <form method=POST action="{% url 'search_results' %}">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="search" class="form-control" placeholder="Search Title & Tag" arial-label="Search"
+                            name="searched">
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-3">
+                <br>
+            </div>
+        </div>
+</div>
 {% endblock %}
