--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="text-center">
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2 class="text-center">Task Manager</h2>
-    <p>
-        Welcome to Homepage of Maktab98 Tasks
-    </p>
+{% for task in tasks %}
+<div class="container mt-3">
+    <div class="col-2 text-center ">
+        <div class="card">
+            <div class="card-body bg-secondary">
+                <h5 class="card-title">{{task.title}}</h5>
+                <p class="card-text">
+                    <strong>due_date:</strong> <br> {{ task.due_date}}
+                </p>
+                <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
+                    details </a>
+            </div>
+        </div>
+    </div>
 </div>
+<br>
+{% endfor %}
 {% endblock %}
