add category to navbar

--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -26,6 +26,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
                     </li>
+                    {% block category %}
+                    {% endblock %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'search' %}">Search</a>
                     </li>
