--- a/HW15/TaskManager/template/main_page.html
+++ b/HW15/TaskManager/template/main_page.html
@@ -7,7 +7,7 @@
     <br>
     <h2 class="text-center">Task Manager</h2>
     <p>
-        Welcome to Homepage of Maktab98 Tasks
+        Maktab-98 Task Manager
     </p>
 </div>
 {% endblock %}
