--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% for task in tasks %}
 <div class="container mt-3">
+    {% for task in tasks %}
     <div class="col-2 text-center ">
         <div class="card">
             <div class="card-body bg-secondary">
@@ -14,7 +15,6 @@
             </div>
         </div>
     </div>
+    {% endfor %}
 </div>
-<br>
-{% endfor %}
 {% endblock %}
