home paged changed

--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -1,20 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-{% for task in tasks %}
 <div class="container mt-3">
-    {% for task in tasks %}
-    <div class="col-2 text-center ">
-        <div class="card">
-            <div class="card-body bg-secondary">
-                <h5 class="card-title">{{task.title}}</h5>
-                <p class="card-text">
-                    <strong>due_date:</strong> <br> {{ task.due_date}}
-                </p>
-                <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
-                    details </a>
+    <div class="row">
+        {% for task in tasks %}
+        <div class="col-4 text-center ">
+            <div class="card mt-3">
+                <div class="card-body bg-secondary">
+                    <h5 class="card-title">{{task.title}}</h5>
+                    <p class="card-text">
+                        <strong>due_date:</strong> <br> {{ task.due_date}}
+                    </p>
+                    <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
+                        details </a>
+                </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
+<br>
 {% endblock %}
