--- a/HW15/TaskManager/template/task_detail.html
+++ b/HW15/TaskManager/template/task_detail.html
@@ -5,7 +5,7 @@
     <p><strong>Title:</strong> {{ detail.title }}</p>
     <p><strong>Description:</strong> {{ detail.description }}</p>
     <p><strong>Due Date:</strong> {{ detail.due_date }}</p>
-    <p><strong>Remaining time:</strong> {{remain}}</p>
+    <p><strong>STATUS:</strong> {{remain}}</p>
     <p><strong>Tags:</strong>
         {% for tag in tags %}
         {{ tag.name }}
