--- a/HW15/TaskManager/template/main_page.html
+++ b/HW15/TaskManager/template/main_page.html
@@ -1,13 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="text-center">
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2 class="text-center">Task Manager</h2>
+<div class="text-center mt-4 py-3">
+    <h1 class="text-center">Task Manager</h1>
     <p>
-        Maktab-98 Task Manager
+        <strong>Maktab-98 Task Manager</strong>
     </p>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-3">
+
+            </div>
+            <div class="col-6 text-center">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolorum consectetur natus autem libero adipisci saepe
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quod, hic odit, dolorem non quisquam
+                    doloremque laborum fugit quae animi alias magnam possimus esse aperiam fuga libero? Molestiae, culpa
+                    voluptatem?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae animi veritatis, nostrum
+                    iste, voluptatem quas excepturi odio repudiandae blanditiis sint possimus dolor officia ipsam nulla
+                    eligendi corrupti. Ut, fuga ducimus.
+                </p>
+            </div>
+            <div class="col-3">
+
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
