--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block category %}
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'tasks' %}">Category</a>
+    <a class="nav-link" href="{% url 'category' %}">Category</a>
 </li>
 {% endblock %}
 {% block content %}
