--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-secondary">
+    <nav class="navbar  sticky-top navbar-expand-lg bg-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'main_page' %}">Task Manager</a>
+            <i class="bi bi-ui-checks fs-3"></i>
+            <a class="navbar-brand px-2" href="{% url 'main_page' %}">Task Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,16 +50,10 @@
     <br>
     <br>
     <br>
-    <footer class="footer bg-dark ">
-        <div class="container">
-            <div class="row py-5 ">
-                <div class="col-6">
-                    <a class="mx-3" href="" style="text-decoration:none">About</a>
-                    <a class="mx-3" href="" style="text-decoration:none">Contact</a>
-                    <a class="mx-3" href="" style="text-decoration:none">Terms of Use</a>
-                    <a class="mx-3" href="" style="text-decoration:none">Privacy Policy</a>
-                </div>
-                <div class="col-6 text-end">
+    <footer class="footer sticky-bottom bg-dark ">
+        <div class="container text-center">
+            <div class="row py-2">
+                <div class="col-12 text-center">
                     <a class="mx-3" href=" #!" style="text-decoration:none">
                         <i class="bi-facebook fs-3"></i>
                     </a>
@@ -66,8 +61,19 @@
                         <i class="bi-twitter fs-3"></i>
                     </a>
                     <a class="mx-3" href=" #!" style="text-decoration:none">
+                        <i class="bi bi-github fs-3"></i>
+                    </a>
+                    <a class="mx-3" href=" #!" style="text-decoration:none">
                         <i class="bi-instagram fs-3"></i>
                     </a>
+                </div>
+            </div>
+            <div class="row py-2 ">
+                <div class="col-12">
+                    <a class="mx-3" href="" style="text-decoration:none">About</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Contact</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Terms of Use</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Privacy Policy</a>
                 </div>
             </div>
         </div>
