--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -11,26 +11,26 @@
 </head>
 
 <body>
-    <nav class="navbar  sticky-top navbar-expand-lg bg-secondary">
-        <div class="container-fluid">
+    <nav class="navbar  sticky-top navbar-expand-lg bg-dark">
+        <div class="container-fluid text-primary">
             <i class="bi bi-ui-checks fs-3"></i>
-            <a class="navbar-brand px-2" href="{% url 'main_page' %}">Task Manager</a>
+            <a class="navbar-brand px-2 text-light" href="{% url 'main_page' %}">Task Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav text-light">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link text-light" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
+                        <a class="nav-link text-light" href="{% url 'tasks' %}">Tasks</a>
                     </li>
                     {% block category %}
                     {% endblock %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'search' %}">Search</a>
+                        <a class="nav-link text-light" href="{% url 'search' %}">Search</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
     <br>
     <br>
     <br>
-    <footer class="footer sticky-bottom bg-dark ">
+    <footer class="footer_container sticky-bottom bg-dark ">
         <div class="container text-center">
             <div class="row py-2">
                 <div class="col-12 text-center">
