--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -4,9 +4,9 @@
     <div class="row">
         {% for task in tasks %}
         <div class="col-4 text-center ">
-            <div class="card mt-3">
+            <div class="card border-primary mt-3">
+                <div class="card-header bg-dark text-light">{{task.title}}</div>
                 <div class="card-body bg-secondary">
-                    <h5 class="card-title">{{task.title}}</h5>
                     <p class="card-text">
                         <strong>due_date:</strong> <br> {{ task.due_date}}
                     </p>
