--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar  sticky-top navbar-expand-lg bg-dark">
+    <nav class="navbar  sticky-top navbar-expand-lg bg-dark py-4">
         <div class="container-fluid text-primary">
             <i class="bi bi-ui-checks fs-3"></i>
             <a class="navbar-brand px-2 text-light" href="{% url 'main_page' %}">Task Manager</a>
@@ -50,9 +50,9 @@
     <br>
     <br>
     <br>
-    <footer class="footer_container sticky-bottom bg-dark ">
-        <div class="container text-center">
-            <div class="row py-2">
+    <footer class="footer_container bg-dark py-3">
+        <div class="container text-center py-2">
+            <div class="row py-3">
                 <div class="col-12 text-center">
                     <a class="mx-3" href=" #!" style="text-decoration:none">
                         <i class="bi-facebook fs-3"></i>
@@ -68,7 +68,7 @@
                     </a>
                 </div>
             </div>
-            <div class="row py-2 ">
+            <div class="row py-3 ">
                 <div class="col-12">
                     <a class="mx-3" href="" style="text-decoration:none">About</a>
                     <a class="mx-3" href="" style="text-decoration:none">Contact</a>
