--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -50,8 +50,8 @@
     <br>
     <br>
     <br>
-    <footer class="footer_container bg-dark py-3">
-        <div class="container text-center py-2">
+    <footer class="footer_container bg-dark" style="position: fixed; left: 0; bottom: 0; width: 100%;">
+        <div class="container text-center ">
             <div class="row py-3">
                 <div class="col-12 text-center">
                     <a class="mx-3" href=" #!" style="text-decoration:none">
