--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -36,9 +36,47 @@
             </div>
         </div>
     </nav>
+    <br>
+    <br>
     {% block content %}
     {% endblock %}
-    <footer class="footer_container bg-dark" style="position: fixed; left: 0; bottom: 0; width: 100%;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer class="footer_container sticky-bottom bg-dark">
         <div class="container text-center ">
             <div class="row py-3">
                 <div class="col-12 text-center">
