--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -7,6 +7,7 @@
             <div class="card mt-3">
                 <div class="card-body bg-secondary">
                     <h5 class="card-title">{{cat.name}}</h5>
+                    <a href="">Show all Tasks</a>
                 </div>
             </div>
         </div>
