--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -14,7 +14,8 @@
     <nav class="navbar  sticky-top navbar-expand-lg bg-dark py-4">
         <div class="container-fluid text-primary">
             <i class="bi bi-ui-checks fs-3"></i>
-            <a class="navbar-brand px-2 text-light" href="{% url 'main_page' %}">Task Manager</a>
+            <a class="navbar-brand px-2 text-light fs-2" href="{% url 'main_page' %}">Task
+                Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
