--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -29,7 +29,9 @@
     </div>
 </div>
 <br>
-<hr>
+<div class="p-4 m-2">
+    <hr>
+</div>
 <h2 class="text-center display-4"> Finished </h2>
 <br>
 <div class="container mt-3">
