--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -12,7 +12,7 @@
     <div class="row">
         {% for task in tasks %}
         {% if task.status == 'O'%}
-        <div class="col-4 text-center ">
+        <!--<div class="col-4 text-center ">
             <div class="card mt-3">
                 <div class="card-body bg-secondary">
                     <h5 class="card-title">{{task.title}}</h5>
@@ -21,6 +21,21 @@
                     </p>
                     <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
                         details </a>
+                </div>
+            </div>
+        </div>-->
+        <div class="col-4 text-center ">
+            <div class="card border-primary mt-3" style="max-width: 18rem;">
+                <h2 class="card-header">{{task.title}}</h2>
+                <div class="card-body">
+                    <p class="card-text">
+                        <strong>Due Date:</strong> <br> {{ task.due_date}}
+                    </p>
+                    <a class="text-dark" href="{% url 'tasks' %}{{task.id}}">
+                        <button type="button" class="btn btn-primary">
+                            Detail
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -38,7 +53,7 @@
     <div class="row">
         {% for task in tasks %}
         {% if task.status == 'F'%}
-        <div class="col-4 text-center ">
+        <!--<div class="col-4 text-center ">
             <div class="card mt-3">
                 <div class="card-body bg-secondary">
                     <h5 class="card-title">{{task.title}}</h5>
@@ -47,6 +62,21 @@
                     </p>
                     <a href='{{ task.id }}' style="text-decoration:none" style="text-decoration:none" class="text-info">
                         details </a>
+                </div>
+            </div>
+        </div>-->
+        <div class="col-4 text-center ">
+            <div class="card border-primary mt-3" style="max-width: 18rem;">
+                <h2 class="card-header">{{task.title}}</h2>
+                <div class="card-body">
+                    <p class="card-text">
+                        <strong>Due Date:</strong> <br> {{ task.due_date}}
+                    </p>
+                    <a class="text-dark" href="{% url 'tasks' %}{{task.id}}">
+                        <button type="button" class="btn btn-primary">
+                            Detail
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
