--- a/HW15/TaskManager/template/category_detail.html
+++ b/HW15/TaskManager/template/category_detail.html
@@ -3,7 +3,7 @@
 <div class="container mt-3">
     <div class="row">
         {% for task in tasks %}
-        <div class="col-4 text-center ">
+        <!--<div class="col-4 text-center ">
             <div class="card border-primary mt-3">
                 <div class="card-header bg-dark text-light">{{task.title}}</div>
                 <div class="card-body bg-secondary">
@@ -13,6 +13,21 @@
                     <a href="{% url 'task_detail' task.id %}" style="text-decoration:none" style="text-decoration:none"
                         class="text-info">
                         details </a>
+                </div>
+            </div>
+        </div>-->
+        <div class="col-4 text-center ">
+            <div class="card border-primary mt-3" style="max-width: 18rem;">
+                <h2 class="card-header">{{task.title}}</h2>
+                <div class="card-body">
+                    <p class="card-text">
+                        <strong>Due Date:</strong> <br> {{ task.due_date}}
+                    </p>
+                    <a class="text-dark" href="{% url 'tasks' %}{{task.id}}">
+                        <button type="button" class="btn btn-primary">
+                            Detail
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
