--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
         </div>-->
-        <div class="col-4 text-center ">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center ">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
                 <h2 class="card-header">{{cat.name}}</h2>
                 <div class="card-body">
