--- a/HW15/TaskManager/template/search_results.html
+++ b/HW15/TaskManager/template/search_results.html
@@ -4,7 +4,7 @@
 <div class="container mt-3">
     <div class="row">
         {% for result in results %}
-        <div class="col-4 text-center ">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center ">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
                 <h2 class="card-header">{{result.title}}</h2>
                 <div class="card-body">
