--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -8,8 +8,8 @@
 <br>
 <h2 class=" display-4 text-center"> OnGoing </h2>
 <br>
-<div class="container mt-3">
-    <div class="row">
+<div class="container mt-3 align-items-center">
+    <div class="row align-items-center">
         {% for task in tasks %}
         {% if task.status == 'O'%}
         <!--<div class="col-4 text-center ">
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>-->
-        <div class="col-4 text-center ">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
                 <h2 class="card-header">{{task.title}}</h2>
                 <div class="card-body">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>-->
-        <div class="col-4 text-center ">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center ">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
                 <h2 class="card-header">{{task.title}}</h2>
                 <div class="card-body">
