--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -9,7 +9,7 @@
 <h2 class=" display-4 text-center"> OnGoing </h2>
 <br>
 <div class="container mt-3 align-items-center">
-    <div class="row align-items-center">
+    <div class="row">
         {% for task in tasks %}
         {% if task.status == 'O'%}
         <!--<div class="col-4 text-center ">
