adding new category

--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -27,4 +27,14 @@
     </div>
 </div>
 <br>
+<article class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <h3>Add Category:</h3>
+        <form class=" row gx-4 gx-lg-5 justify-content-center needs-validation" method="GET">
+            <label>category name: </label>
+            <input type=" text" label="name" placeholder="name" name="name">
+            <input type="submit" name="sub">
+        </form>
+    </div>
+</article>
 {% endblock %}
