date --> datetime-local

--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -111,7 +111,8 @@
                 </div>
                 <div class="col-md-4">
                     <label for="validationDefault02" class="form-label">Due Date</label>
-                    <input type="date" class="form-control" id="validationDefault02" value="" name="due_date" required>
+                    <input type="datetime-local" class="form-control" id="validationDefault02" value="" name="due_date"
+                        required>
                 </div>
                 <div class="col-md-3">
                     <label for="validationDefault04" class="form-label">State</label>
