--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -31,7 +31,8 @@
 <article class="mb-4">
     <div class="container px-4 px-lg-5">
         <h3>Add Category:</h3>
-        <form class=" row gx-4 gx-lg-5 justify-content-center needs-validation" method="GET">
+        <form class=" row gx-4 gx-lg-5 justify-content-center needs-validation" method="POST">
+            {% csrf_token %}
             <div class="col-12">
                 <label for="validationDefault01" class="form-label">Category Name:</label>
                 <input type="text" class="form-control" id="validationDefault01" value="" name="name" required>
