category html form changed

--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -37,7 +37,10 @@
                 <label for="validationDefault01" class="form-label">Category Name:</label>
                 <input type="text" class="form-control" id="validationDefault01" value="" name="name" required>
             </div>
-            <br>
+            <div class="mb-3">
+                <label for="formFile" class="form-label">Default file input example</label>
+                <input class="form-control" type="file" id="formFile" name="cat_image">
+            </div>
             <div class="col-12 mt-3">
                 <button class="btn btn-primary" type="submit" name="sub">Submit form</button>
             </div>
