task forms changed

--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -138,6 +138,10 @@
                         {% endfor %}
                     </select>
                 </div>
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">Default file input example</label>
+                    <input class="form-control" type="file" id="formFile" name="task_file">
+                </div>
                 <div class="col-12">
                     <button class="btn btn-primary" type="submit" name="sub">Submit form</button>
                 </div>
