--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -13,6 +13,7 @@
         </div>-->
         <div class="col-lg-4 col-md-6 col-sm-12 text-center ">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
+                <img src={{cat.img.url}} class="card-img-top" alt="...">
                 <h2 class="card-header">{{cat.name}}</h2>
                 <div class="card-body">
                     <a class="text-dark" href="{{ cat.id }}">
