--- a/HW15/TaskManager/template/home.html
+++ b/HW15/TaskManager/template/home.html
@@ -5,6 +5,7 @@
         {% for task in tasks %}
         <div class="col-lg-4 col-md-6 col-sm-12 text-center ">
             <div class="card border-primary mt-3" style="max-width: 18rem;">
+                <img src={{task.file.url}} class="card-img-top" alt="...">
                 <h2 class="card-header">{{task.title}}</h2>
                 <div class="card-body">
                     <p class="card-text">
