--- a/HW15/TaskManager/template/category.html
+++ b/HW15/TaskManager/template/category.html
@@ -44,7 +44,7 @@
                 <input class="form-control" type="file" id="formFile" name="cat_image" accept="image/*">
             </div>
             <div class="col-12 mt-3">
-                <button class="btn btn-primary" type="submit" name="sub">Submit form</button>
+                <button class="btn btn-primary" type="submit" name="sub">ADD</button>
             </div>
         </form>
     </div>
