--- a/HW15/TaskManager/template/category_detail.html
+++ b/HW15/TaskManager/template/category_detail.html
@@ -79,7 +79,24 @@
                     <input class="form-control" type="file" id="formFile" name="task_file">
                 </div>
                 <div class="col-12">
-                    <button class="btn btn-primary" type="submit" name="sub">Submit form</button>
+                    <button class="btn btn-primary" type="submit" name="sub">ADD</button>
+                </div>
+            </form>
+        </div>
+    </article>
+</div>
+
+<div>
+    <article class="mb-4">
+        <div class="container px-4 px-lg-5">
+            <h3>Change Category Name:</h3>
+            <form class="row g-3" method="POST">
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">Default file input example</label>
+                    <input class="form-control" type="text" id="formFile" name="new_name">
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit" name="UPDATE">Submit form</button>
                 </div>
             </form>
         </div>
