--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -98,7 +98,7 @@
                 <input type="text" label="tags" placeholder="tags" name="tags">
                 <input class="mt-3" type="submit" name="sub">
             </form>-->
-            <form class="row g-3" method="POST" action="">
+            <form class="row g-3" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="col-md-4">
                     <label for="validationDefault01" class="form-label">Title</label>
