--- a/HW15/TaskManager/template/category_detail.html
+++ b/HW15/TaskManager/template/category_detail.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Default file input example</label>
-                    <input class="form-control" type="file" id="formFile" name="new_image">
+                    <input class="form-control" type="file" id="formFile" name="new_image" accept="image/*">
                 </div>
                 <div class="col-12">
                     <button class="btn btn-primary" type="submit" name="UPDATE">Submit form</button>
