--- a/HW15/TaskManager/template/tasks.html
+++ b/HW15/TaskManager/template/tasks.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Default file input example</label>
-                    <input class="form-control" type="file" id="formFile" name="task_file">
+                    <input class="form-control" type="file" id="formFile" name="task_file" accept="image/*">
                 </div>
                 <div class="col-12">
                     <button class="btn btn-primary" type="submit" name="sub">Submit form</button>
