--- a/HW15/TaskManager/template/base.html
+++ b/HW15/TaskManager/template/base.html
@@ -33,6 +33,15 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{% url 'search' %}">Search</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'search' %}">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'search' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'search' %}">Login</a>
+                    </li>
                 </ul>
             </div>
         </div>
