--- a/HW15/TaskManager/template/search.html
+++ b/HW15/TaskManager/template/search.html
@@ -14,7 +14,7 @@
                 <br>
             </div>
             <div class="col-6">
-                <form method=POST action="{% url 'search_results' %}">
+                <form method=POST action="{% url 'TaskApp:search_results' %}">
                     {% csrf_token %}
                     <div class="input-group">
                         <input type="search" class="form-control" placeholder="Search Title & Tag" arial-label="Search"
