--- a/HW15/TaskManager/template/search_results.html
+++ b/HW15/TaskManager/template/search_results.html
@@ -11,7 +11,7 @@
                     <p class="card-text">
                         <strong>Due Date:</strong> <br> {{ result.due_date}}
                     </p>
-                    <a class="text-dark" href="{% url 'tasks' %}{{result.id}}">
+                    <a class="text-dark" href="{% url 'TaskApp:tasks' %}{{result.id}}">
                         <button type="button" class="btn btn-primary">
                             Detail
                         </button>
